--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="./recipes/pasta-amatriciana.html">Pasta all'amatriciana</a>
-    <a href="./recipes/pasta-carbonara.html">Pasta carbonara</a>
-    <a href="./recipes/pizza.html">Pizza margherita</a>
-    <a href="./recipes/risotto-milanese.html">Risotto milanese</a>
+    <ul>
+        <li><a href="./recipes/pasta-amatriciana.html">Pasta all'amatriciana</a></li>
+        <li><a href="./recipes/pasta-carbonara.html">Pasta carbonara</a></li>
+        <li><a href="./recipes/pizza.html">Pizza margherita</a></li>
+        <li><a href="./recipes/risotto-milanese.html">Risotto milanese</a></li>
+    </ul>
+
 </body>
 </html>
