--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="./recipes/pasta-amatriciana.html">Pasta all'amatriciana</a></li>
         <li><a href="./recipes/pasta-carbonara.html">Pasta carbonara</a></li>
-        <li><a href="./recipes/pizza.html">Pizza margherita</a></li>
+        <!-- <li><a href="./recipes/pizza.html">Pizza margherita</a></li> -->
         <li><a href="./recipes/risotto-milanese.html">Risotto milanese</a></li>
     </ul>
 
