Add CSS styling

--- a/recipes/pasta-amatriciana.html
+++ b/recipes/pasta-amatriciana.html
@@ -4,31 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasta all'amatriciana</title>
+    <link rel="stylesheet" href="../css/recipe.css">
 </head>
 <body>
     <a href="https://www.sunset.com/recipe/penne-allamatriciana"><h1>Pasta all'amatriciana</h1></a>
     <img src="../img/amatriciana.jpg" width=500 alt="Plate with small portion of penne amatriciana">
-    <h3>Description</h3>
-    <p>This simple penne pasta dish features pancetta, diced tomatoes, red chile flakes, and parmesan cheese.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>8 oz penne pasta</li>
-        <li>4 oz pancetta, cubed</li>
-        <li>1 cup chopped onion</li>
-        <li>1 tbsp garlic, minced</li>
-        <li>1 large can of diced tomatoes</li>
-        <li>salt and freshly ground pepper</li>
-        <li>1 tbsp red chilli flakes</li>
-        <li>1/4 cup grated parmesan cheese</li>
-    </ul>
 
-    <h3>Steps</h3>   
-    <ol>
-        <li>Cook pasta according to package directions; drain and set aside.</li>
-        <li>Cook pancetta in a large frying pan over medium-high heat until partly translucent. Spoon off most of drippings. </li>
-        <li>Add onion and garlic; cook, stirring often, until browned, 5 minutes.</li>
-        <li>Add remaining ingredients except parmesan and cook over high heat until juices have reduced by half, about 10 minutes.</li>
-        <li>Add pasta, stir to coat, and transfer to a bowl. Sprinkle with parmesan.</li>
-    </ol>
+    <div class="recipe-wrap">
+        <h3>Description</h3>
+        <p>This simple penne pasta dish features pancetta, diced tomatoes, red chile flakes, and parmesan cheese.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>8 oz penne pasta</li>
+            <li>4 oz pancetta, cubed</li>
+            <li>1 cup chopped onion</li>
+            <li>1 tbsp garlic, minced</li>
+            <li>1 large can of diced tomatoes</li>
+            <li>salt and freshly ground pepper</li>
+            <li>1 tbsp red chilli flakes</li>
+            <li>1/4 cup grated parmesan cheese</li>
+        </ul>
+
+        <h3>Steps</h3>   
+        <ol>
+            <li>Cook pasta according to package directions; drain and set aside.</li>
+            <li>Cook pancetta in a large frying pan over medium-high heat until partly translucent. Spoon off most of drippings. </li>
+            <li>Add onion and garlic; cook, stirring often, until browned, 5 minutes.</li>
+            <li>Add remaining ingredients except parmesan and cook over high heat until juices have reduced by half, about 10 minutes.</li>
+            <li>Add pasta, stir to coat, and transfer to a bowl. Sprinkle with parmesan.</li>
+        </ol>
+    </div>
 </body>
 </html>
