--- a/recipes/risotto-milanese.html
+++ b/recipes/risotto-milanese.html
@@ -4,34 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Risotto milanese</title>
+    <link rel="stylesheet" href="../css/recipe.css">
 </head>
 <body>
     <a href="https://www.foodandwine.com/recipes/milanese-risotto"><h1>Risotto alla Milanese</h1></a>
     <img src="../img/risotto.jpg" width=500 alt="Plate with small portion of risotto alla milanese">
-    <h3>Description</h3>
-    <p>Making Italian risotto is a brief exercise in patience that yields a wonderfully creamy, comforting result. This version owes its delicate flavor and golden hue to saffron.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>5 1/2 cups chicken stock</li>
-        <li>2 tbsp extra virgin olive oil</li>
-        <li>1 small onion, finely chopped</li>
-        <li>salt</li>
-        <li>freshly ground black pepper</li>
-        <li>1 1/2 cups arborio rice</li>
-        <li>pinch of saffron threads</li>
-        <li>1/2 cup dry white wine</li>
-        <li>1/2 cup freshly grated parmesan cheese</li>
-        <li>1 tbsp unsalted butter</li>
-        <li>2 tbsp chopped flat-leaf parsley</li>
-    </ul>
 
-    <h3>Steps</h3>   
-    <ol>
-        <li>In a medium saucepan, bring the chicken stock to a simmer; keep warm.</li>
-        <li>In a large saucepan, heat the olive oil. Add the onion, season with salt and pepper, and cook over moderate heat, stirring, until softened, about 5 minutes. Add the rice and cook for 1 minute, stirring to thoroughly coat.</li>
-        <li>Crumble the saffron into the wine and add it to the rice. Cook, stirring, until the wine is absorbed.</li>
-        <li>Add 1 cup of the warm stock and cook over moderate heat, stirring constantly, until nearly absorbed. Continue adding the stock 1/2 cup at a time, stirring constantly, until it is nearly absorbed between additions.</li>
-        <li>The risotto is done when the rice is al dente and suspended in a thick, creamy sauce, about 20 minutes total. Season the risotto with salt and pepper. Stir in the cheese, butter, and parsley and serve immediately.</li>
-    </ol>
+    <div class="recipe-wrap">
+        <h3>Description</h3>
+        <p>Making Italian risotto is a brief exercise in patience that yields a wonderfully creamy, comforting result. This version owes its delicate flavor and golden hue to saffron.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>5 1/2 cups chicken stock</li>
+            <li>2 tbsp extra virgin olive oil</li>
+            <li>1 small onion, finely chopped</li>
+            <li>salt</li>
+            <li>freshly ground black pepper</li>
+            <li>1 1/2 cups arborio rice</li>
+            <li>pinch of saffron threads</li>
+            <li>1/2 cup dry white wine</li>
+            <li>1/2 cup freshly grated parmesan cheese</li>
+            <li>1 tbsp unsalted butter</li>
+            <li>2 tbsp chopped flat-leaf parsley</li>
+        </ul>
+
+        <h3>Steps</h3>   
+        <ol>
+            <li>In a medium saucepan, bring the chicken stock to a simmer; keep warm.</li>
+            <li>In a large saucepan, heat the olive oil. Add the onion, season with salt and pepper, and cook over moderate heat, stirring, until softened, about 5 minutes. Add the rice and cook for 1 minute, stirring to thoroughly coat.</li>
+            <li>Crumble the saffron into the wine and add it to the rice. Cook, stirring, until the wine is absorbed.</li>
+            <li>Add 1 cup of the warm stock and cook over moderate heat, stirring constantly, until nearly absorbed. Continue adding the stock 1/2 cup at a time, stirring constantly, until it is nearly absorbed between additions.</li>
+            <li>The risotto is done when the rice is al dente and suspended in a thick, creamy sauce, about 20 minutes total. Season the risotto with salt and pepper. Stir in the cheese, butter, and parsley and serve immediately.</li>
+        </ol>
+    </div>
 </body>
 </html>
