--- a/recipes/pasta-carbonara.html
+++ b/recipes/pasta-carbonara.html
@@ -4,41 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasta carbonara</title>
+    <link rel="stylesheet" href="../css/recipe.css">
 </head>
 <body>
     <a href="https://www.simplyrecipes.com/recipes/spaghetti_alla_carbonara/"><h1>Pasta carbonara</h1></a>
     <img src="../img/carbonara.jpg" width=500 alt="Plate with small portion of spaghetti carbonara">
-    <h3>Description</h3>
-    <p>Pasta carbonara is an indulgent yet surprisingly simple recipe. Made with pancetta (or bacon) and plenty of Parmesan,
-        this recipe takes only 30 minutes to prepare from start to finish!</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1 tbsp extra virgin olive oil</li>
-        <li>1/2 lbs pancetta, diced</li>
-        <li>1 to 2 garlic cloves, minced</li>
-        <li>3 to 4 whole eggs</li>
-        <li>1 cup grated Parmesan or pecorino cheese</li>
-        <li>1 lbs spaghetti</li>
-        <li>salt and freshly ground pepper</li>
-    </ul>
 
-    <h3>Steps</h3>   
-    <ol>
-        <li><strong>Heat the pasta water: </strong>Put a large pot of salted water on to boil (1 tablespoon salt for every 2 quarts of water.)</li>
-        <li><strong>Sauté the pancetta or bacon and garlic:</strong>
-            While the water is coming to a boil, heat the olive oil or butter in a large sauté pan over medium heat. Add the bacon or pancetta and cook slowly until crispy.
-            Add the garlic (if using) and cook another minute, then turn off the heat and put the pancetta and garlic into a large bowl.</li>
-        <li><strong>Beat the eggs and half of the cheese:</strong>
-            In a small bowl, beat the eggs and mix in about half of the cheese.</li>
-        <li><strong>Cook the pasta:</strong>
-            Once the water has reached a rolling boil, add the dry pasta, and cook, uncovered, at a rolling boil.</li>
-        <li><strong>Toss the pasta with pancetta or bacon:</strong>
-            When the pasta is al dente (still a little firm, not mushy), use tongs to move it to the bowl with the bacon and garlic. Let it be dripping wet. Reserve some of the pasta water.
-            Move the pasta from the pot to the bowl quickly, as you want the pasta to be hot. It's the heat of the pasta that will heat the eggs sufficiently to create a creamy sauce.
-            Toss everything to combine, allowing the pasta to cool just enough so that it doesn't make the eggs curdle when you mix them in. (That's the tricky part.)</li>
-        <li><strong>Add the beaten egg mixture:</strong>
-            Add the beaten eggs with cheese and toss quickly to combine once more. Add salt to taste. Add some pasta water back to the pasta to keep it from drying out.</li>
-        <li><strong>Serve at once with the rest of the parmesan and freshly ground black pepper. If you want, sprinkle with a little fresh chopped parsley.</strong></li>
-    </ol>
+    <div class="recipe-wrap">
+        <h3>Description</h3>
+        <p>Pasta carbonara is an indulgent yet surprisingly simple recipe. Made with pancetta (or bacon) and plenty of Parmesan,
+            this recipe takes only 30 minutes to prepare from start to finish!</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 tbsp extra virgin olive oil</li>
+            <li>1/2 lbs pancetta, diced</li>
+            <li>1 to 2 garlic cloves, minced</li>
+            <li>3 to 4 whole eggs</li>
+            <li>1 cup grated Parmesan or pecorino cheese</li>
+            <li>1 lbs spaghetti</li>
+            <li>salt and freshly ground pepper</li>
+        </ul>
+
+        <h3>Steps</h3>   
+        <ol>
+            <li><strong>Heat the pasta water: </strong>Put a large pot of salted water on to boil (1 tablespoon salt for every 2 quarts of water.)</li>
+            <li><strong>Sauté the pancetta or bacon and garlic:</strong>
+                While the water is coming to a boil, heat the olive oil or butter in a large sauté pan over medium heat. Add the bacon or pancetta and cook slowly until crispy.
+                Add the garlic (if using) and cook another minute, then turn off the heat and put the pancetta and garlic into a large bowl.</li>
+            <li><strong>Beat the eggs and half of the cheese:</strong>
+                In a small bowl, beat the eggs and mix in about half of the cheese.</li>
+            <li><strong>Cook the pasta:</strong>
+                Once the water has reached a rolling boil, add the dry pasta, and cook, uncovered, at a rolling boil.</li>
+            <li><strong>Toss the pasta with pancetta or bacon:</strong>
+                When the pasta is al dente (still a little firm, not mushy), use tongs to move it to the bowl with the bacon and garlic. Let it be dripping wet. Reserve some of the pasta water.
+                Move the pasta from the pot to the bowl quickly, as you want the pasta to be hot. It's the heat of the pasta that will heat the eggs sufficiently to create a creamy sauce.
+                Toss everything to combine, allowing the pasta to cool just enough so that it doesn't make the eggs curdle when you mix them in. (That's the tricky part.)</li>
+            <li><strong>Add the beaten egg mixture:</strong>
+                Add the beaten eggs with cheese and toss quickly to combine once more. Add salt to taste. Add some pasta water back to the pasta to keep it from drying out.</li>
+            <li><strong>Serve at once with the rest of the parmesan and freshly ground black pepper. If you want, sprinkle with a little fresh chopped parsley.</strong></li>
+        </ol>
+    </div>
 </body>
 </html>
