Pages optimised for mobile phones

--- a/recipes/pasta-amatriciana.html
+++ b/recipes/pasta-amatriciana.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="../css/recipe.css">
 </head>
 <body>
-    <a href="https://www.sunset.com/recipe/penne-allamatriciana"><h1>Pasta all'amatriciana</h1></a>
-    <img src="../img/amatriciana.jpg" width=500 alt="Plate with small portion of penne amatriciana">
-
     <div class="recipe-wrap">
+    <a href="https://www.sunset.com/recipe/penne-allamatriciana"><h1>Pasta all'amatriciana</h1></a>
+    <img src="../img/amatriciana.jpg" alt="Plate with small portion of penne amatriciana">
+
         <h3>Description</h3>
         <p>This simple penne pasta dish features pancetta, diced tomatoes, red chile flakes, and parmesan cheese.</p>
         <h3>Ingredients</h3>
