--- a/recipes/pasta-carbonara.html
+++ b/recipes/pasta-carbonara.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="../css/recipe.css">
 </head>
 <body>
-    <a href="https://www.simplyrecipes.com/recipes/spaghetti_alla_carbonara/"><h1>Pasta carbonara</h1></a>
-    <img src="../img/carbonara.jpg" width=500 alt="Plate with small portion of spaghetti carbonara">
-
     <div class="recipe-wrap">
+    <a href="https://www.simplyrecipes.com/recipes/spaghetti_alla_carbonara/"><h1>Pasta carbonara</h1></a>
+    <img src="../img/carbonara.jpg" alt="Plate with small portion of spaghetti carbonara">
+
         <h3>Description</h3>
         <p>Pasta carbonara is an indulgent yet surprisingly simple recipe. Made with pancetta (or bacon) and plenty of Parmesan,
             this recipe takes only 30 minutes to prepare from start to finish!</p>
