--- a/recipes/risotto-milanese.html
+++ b/recipes/risotto-milanese.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="../css/recipe.css">
 </head>
 <body>
-    <a href="https://www.foodandwine.com/recipes/milanese-risotto"><h1>Risotto alla Milanese</h1></a>
-    <img src="../img/risotto.jpg" width=500 alt="Plate with small portion of risotto alla milanese">
-
     <div class="recipe-wrap">
+    <a href="https://www.foodandwine.com/recipes/milanese-risotto"><h1>Risotto alla Milanese</h1></a>
+    <img src="../img/risotto.jpg" alt="Plate with small portion of risotto alla milanese">
+
         <h3>Description</h3>
         <p>Making Italian risotto is a brief exercise in patience that yields a wonderfully creamy, comforting result. This version owes its delicate flavor and golden hue to saffron.</p>
         <h3>Ingredients</h3>
